--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   </section>
 
   <!-- Content Sections -->
-  <section id="events" class="section">
+  <!-- <section id="events" class="section">
     <div class="container">
       <h2 class="section-heading">GAME MODES <span class="slash">//</span></h2>
       <div class="grid-3">
@@ -144,10 +144,208 @@
         </div>
       </div>
     </div>
+  </section> -->
+  <!-- Merchandise Section -->
+  <section class="merch-section">
+    <div class="merch-container">
+      <h2 class="section-title">OFFICIAL MERCH <span class="slash">//</span></h2>
+
+      <div class="merch-scroll-container">
+        <!-- Item 1: T-Shirt -->
+        <div class="merch-card">
+          <div class="merch-visual">
+            <img src="assets/merch-tshirt.png" alt="Cyber Tee v1">
+            <div class="visual-glow"></div>
+          </div>
+          <div class="merch-info">
+            <h3 class="merch-name">CYBER TEE v1</h3>
+            <span class="merch-price">₹ 499</span>
+          </div>
+          <div class="merch-tag">BESTSELLER</div>
+        </div>
+
+        <!-- Item 2: Hoodie -->
+        <div class="merch-card">
+          <div class="merch-visual">
+            <img src="assets/merch-hoodie.png" alt="Neon Hoodie">
+            <div class="visual-glow purple"></div>
+          </div>
+          <div class="merch-info">
+            <h3 class="merch-name">NEON HOODIE</h3>
+            <span class="merch-price">₹ 999</span>
+          </div>
+          <div class="merch-tag new">NEW DROP</div>
+        </div>
+
+        <!-- Item 3: Cap -->
+        <div class="merch-card">
+          <div class="merch-visual">
+            <img src="assets/merch-cap.png" alt="Snapback 2026">
+            <div class="visual-glow"></div>
+          </div>
+          <div class="merch-info">
+            <h3 class="merch-name">SNAPBACK 2026</h3>
+            <span class="merch-price">₹ 299</span>
+          </div>
+        </div>
+
+        <!-- Item 4: Tote -->
+        <div class="merch-card">
+          <div class="merch-visual">
+            <i class="fa-solid fa-bag-shopping"></i>
+            <div class="visual-glow purple"></div>
+          </div>
+          <div class="merch-info">
+            <h3 class="merch-name">HOLO TOTE</h3>
+            <span class="merch-price">₹ 199</span>
+          </div>
+        </div>
+
+        <!-- Item 5: Sticker Pack -->
+        <div class="merch-card">
+          <div class="merch-visual">
+            <i class="fa-solid fa-note-sticky"></i>
+            <div class="visual-glow"></div>
+          </div>
+          <div class="merch-info">
+            <h3 class="merch-name">STICKER BOMB</h3>
+            <span class="merch-price">₹ 99</span>
+          </div>
+        </div>
+
+        <!-- Item 6: Poster -->
+        <div class="merch-card">
+          <div class="merch-visual">
+            <i class="fa-solid fa-scroll"></i>
+            <div class="visual-glow purple"></div>
+          </div>
+          <div class="merch-info">
+            <h3 class="merch-name">EVENT POSTER</h3>
+            <span class="merch-price">₹ 149</span>
+          </div>
+          <div class="merch-tag limited">LIMITED</div>
+        </div>
+      </div>
+
+      <a href="#store" class="btn-skew-pink btn-merch">SEE ALL MERCH</a>
+    </div>
   </section>
 
-  <footer class="footer-simple">
-    <p>BRIGHTEN YOUR FUTURE _ NIT AGARTALA</p>
+  <!-- Trusted By Section -->
+  <section class="trusted-section">
+    <div class="trusted-container">
+      <div class="trusted-label">TRUSTED BY:</div>
+      <div class="marquee-wrapper">
+        <div class="marquee-track">
+          <!-- Logo Group 1 -->
+          <div class="brand-item">bloom</div>
+          <div class="brand-item"><i class="fa-solid fa-shapes"></i> Designity</div>
+          <div class="brand-item"><i class="fa-brands fa-envato"></i> envato</div>
+          <div class="brand-item"><i class="fa-brands fa-wordpress"></i> WordPress.com</div>
+          <div class="brand-item" style="font-family: 'Brush Script MT', cursive; font-size: 1.8rem;">Kittl</div>
+          <div class="brand-item small-caps">BRAND STRATEGY ACADEMY</div>
+          <div class="brand-item bold-condensed">BrandNew</div>
+
+          <!-- Logo Group 2 (Duplicate for seamless scroll) -->
+          <div class="brand-item">bloom</div>
+          <div class="brand-item"><i class="fa-solid fa-shapes"></i> Designity</div>
+          <div class="brand-item"><i class="fa-brands fa-envato"></i> envato</div>
+          <div class="brand-item"><i class="fa-brands fa-wordpress"></i> WordPress.com</div>
+          <div class="brand-item" style="font-family: 'Brush Script MT', cursive; font-size: 1.8rem;">Kittl</div>
+          <div class="brand-item small-caps">BRAND STRATEGY ACADEMY</div>
+          <div class="brand-item bold-condensed">BrandNew</div>
+
+          <!-- Logo Group 3 (Duplicate for seamless scroll) -->
+          <div class="brand-item">bloom</div>
+          <div class="brand-item"><i class="fa-solid fa-shapes"></i> Designity</div>
+          <div class="brand-item"><i class="fa-brands fa-envato"></i> envato</div>
+          <div class="brand-item"><i class="fa-brands fa-wordpress"></i> WordPress.com</div>
+          <div class="brand-item" style="font-family: 'Brush Script MT', cursive; font-size: 1.8rem;">Kittl</div>
+          <div class="brand-item small-caps">BRAND STRATEGY ACADEMY</div>
+          <div class="brand-item bold-condensed">BrandNew</div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <footer class="footer-modern">
+    <div class="footer-content">
+      <h2 class="footer-heading">CONTACT US</h2>
+
+      <!-- Contact Grid -->
+      <div class="footer-grid">
+        <!-- Column 1 -->
+        <div class="footer-col">
+          <div class="contact-card">
+            <div class="contact-name">SAI CHARAN AJARAPU</div>
+            <div class="contact-role">SPONSORSHIP HEAD</div>
+            <a href="mailto:sponsorship@ayam.nit.ac.in" class="contact-email">sponsorship@ayam.nit.ac.in</a>
+            <div class="contact-phone">+91 83330 28101</div>
+          </div>
+          <div class="contact-card">
+            <div class="contact-name">HARSHA VARDHAN</div>
+            <div class="contact-role">SPONSORSHIP HEAD</div>
+            <a href="mailto:sponsorship@ayam.nit.ac.in" class="contact-email">sponsorship@ayam.nit.ac.in</a>
+            <div class="contact-phone">+91 94911 87225</div>
+          </div>
+        </div>
+
+        <!-- Column 2 -->
+        <div class="footer-col">
+          <div class="contact-card">
+            <div class="contact-name">TANMAY VISHWASRAO</div>
+            <div class="contact-role">OVERALL CO-ORDINATOR</div>
+            <a href="mailto:oc@ayam.nit.ac.in" class="contact-email">oc@ayam.nit.ac.in</a>
+            <div class="contact-phone">+91 99236 26782</div>
+          </div>
+          <div class="contact-card">
+            <div class="contact-name">SYED MISHAAL</div>
+            <div class="contact-role">OVERALL CO-ORDINATOR</div>
+            <a href="mailto:oc@ayam.nit.ac.in" class="contact-email">oc@ayam.nit.ac.in</a>
+            <div class="contact-phone">+91 74185 95803</div>
+          </div>
+        </div>
+
+        <!-- Column 3 -->
+        <div class="footer-col">
+          <div class="contact-card">
+            <div class="contact-name">SAKET KASHYAP</div>
+            <div class="contact-role">PR & OUTREACH HEAD</div>
+            <a href="mailto:pr@ayam.nit.ac.in" class="contact-email">pr@ayam.nit.ac.in</a>
+            <div class="contact-phone">+91 93341 68717</div>
+          </div>
+          <div class="contact-card">
+            <div class="contact-name">NAISHADHA V.</div>
+            <div class="contact-role">PR & OUTREACH HEAD</div>
+            <a href="mailto:pr@ayam.nit.ac.in" class="contact-email">pr@ayam.nit.ac.in</a>
+            <div class="contact-phone">+91 93900 27710</div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Business Section -->
+      <div class="footer-business">
+        <div class="business-label">FOR BUSINESS RELATED QUERIES</div>
+        <a href="mailto:ayam.nita@nit.ac.in" class="business-email">AYAM.NITA@NIT.AC.IN</a>
+      </div>
+
+      <!-- Brand Large Text -->
+      <div class="footer-brand">
+        <span class="brand-text">AYAM 2026</span>
+      </div>
+
+      <!-- Social Icons -->
+      <div class="footer-socials">
+        <a href="#" class="social-link" aria-label="Facebook"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#" class="social-link" aria-label="Instagram"><i class="fa-brands fa-instagram"></i></a>
+        <a href="#" class="social-link" aria-label="YouTube"><i class="fa-brands fa-youtube"></i></a>
+        <a href="#" class="social-link" aria-label="X (Twitter)"><i class="fa-brands fa-x-twitter"></i></a>
+        <a href="#" class="social-link" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+
+      <div class="footer-bottom">
+        &copy; 2026 AYAM - NIT AGARTALA. ALL RIGHTS RESERVED.
+      </div>
+    </div>
   </footer>
 
   <script src="script.js"></script>
