Add Contacts and rename to AAYAM
Signed-off-by: Abhay349 <pandeyabhay967@gmail.com>

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <!-- Navbar -->
   <nav class="top-nav">
     <div class="brand-logo">
-      <span class="brand-main">AYAM</span>
+      <span class="brand-main">AAYAM</span>
       <span class="brand-sub">NIT AGARTALA</span>
     </div>
     <div class="nav-menu">
@@ -95,7 +95,7 @@
 
           <!-- Massive Text -->
           <div class="massive-text-group">
-            <h2 class="massive-ayam">AYAM</h2>
+            <h2 class="massive-ayam">AAYAM</h2>
             <img src="assets/asset 54.svg" alt="Decorative Line" class="pink-ring-img">
           </div>
 
@@ -334,7 +334,7 @@
             </button>
 
             <!-- Decorative Decoration Text/Element -->
-            <div class="deco-text-right">AYAM // 2026</div>
+            <div class="deco-text-right">AAYAM // 2026</div>
           </div>
         </div>
 
@@ -359,49 +359,34 @@
         <!-- Column 1 -->
         <div class="footer-col">
           <div class="contact-card">
-            <div class="contact-name">SAI CHARAN AJARAPU</div>
-            <div class="contact-role">SPONSORSHIP HEAD</div>
+            <div class="contact-name">CHHITIJ RANPAL DAMAI</div>
+            <div class="contact-role">GENERAL SECRETARY</div>
             <a href="mailto:sponsorship@ayam.nit.ac.in" class="contact-email">sponsorship@ayam.nit.ac.in</a>
-            <div class="contact-phone">+91 83330 28101</div>
+            <div class="contact-phone">+91 8967377009</div>
           </div>
-          <div class="contact-card">
-            <div class="contact-name">HARSHA VARDHAN</div>
-            <div class="contact-role">SPONSORSHIP HEAD</div>
-            <a href="mailto:sponsorship@ayam.nit.ac.in" class="contact-email">sponsorship@ayam.nit.ac.in</a>
-            <div class="contact-phone">+91 94911 87225</div>
-          </div>
+          
+      
         </div>
 
         <!-- Column 2 -->
         <div class="footer-col">
           <div class="contact-card">
-            <div class="contact-name">TANMAY VISHWASRAO</div>
-            <div class="contact-role">OVERALL CO-ORDINATOR</div>
-            <a href="mailto:oc@ayam.nit.ac.in" class="contact-email">oc@ayam.nit.ac.in</a>
-            <div class="contact-phone">+91 99236 26782</div>
-          </div>
-          <div class="contact-card">
-            <div class="contact-name">SYED MISHAAL</div>
-            <div class="contact-role">OVERALL CO-ORDINATOR</div>
-            <a href="mailto:oc@ayam.nit.ac.in" class="contact-email">oc@ayam.nit.ac.in</a>
-            <div class="contact-phone">+91 74185 95803</div>
+            <div class="contact-name">PRITISH KUMAR SINGH</div>
+            <div class="contact-role">ASSITANT GENERAL SECRETARY</div>
+            <a href="mailto:sponsorship@ayam.nit.ac.in" class="contact-email">sponsorship@ayam.nit.ac.in</a>
+            <div class="contact-phone">+91 8984699302</div>
           </div>
         </div>
 
         <!-- Column 3 -->
         <div class="footer-col">
           <div class="contact-card">
-            <div class="contact-name">SAKET KASHYAP</div>
-            <div class="contact-role">PR & OUTREACH HEAD</div>
-            <a href="mailto:pr@ayam.nit.ac.in" class="contact-email">pr@ayam.nit.ac.in</a>
-            <div class="contact-phone">+91 93341 68717</div>
+            <div class="contact-name">SHRABANI SINGHA</div>
+            <div class="contact-role">ASSITANT GENERAL SECRETARY</div>
+            <a href="mailto:sponsorship@ayam.nit.ac.in" class="contact-email">sponsorship@ayam.nit.ac.in</a>
+            <div class="contact-phone">+91 8258069144</div>
           </div>
-          <div class="contact-card">
-            <div class="contact-name">NAISHADHA V.</div>
-            <div class="contact-role">PR & OUTREACH HEAD</div>
-            <a href="mailto:pr@ayam.nit.ac.in" class="contact-email">pr@ayam.nit.ac.in</a>
-            <div class="contact-phone">+91 93900 27710</div>
-          </div>
+
         </div>
       </div>
 
@@ -426,7 +411,7 @@
       </div>
 
       <div class="footer-bottom">
-        &copy; 2026 AYAM - NIT AGARTALA. ALL RIGHTS RESERVED.
+        &copy; 2026 AAYAM - NIT AGARTALA. ALL RIGHTS RESERVED.
       </div>
     </div>
   </footer>
