--- a/sponsors.html
+++ b/sponsors.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SPONSORS | AYAM 2026</title>
+  <title>SPONSORS | AAYAM 2026</title>
 
   <!-- Premium Bold Fonts for Tech Fest -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -34,7 +34,7 @@
   <!-- Navbar -->
   <nav class="top-nav">
     <div class="brand-logo">
-      <span class="brand-main">AYAM</span>
+      <span class="brand-main">AAYAM</span>
       <span class="brand-sub">NIT AGARTALA</span>
     </div>
     <div class="nav-menu">
@@ -171,12 +171,12 @@
       <!-- Business Section -->
       <div class="footer-business">
         <div class="business-label">FOR BUSINESS RELATED QUERIES</div>
-        <a href="mailto:ayam.nita@nit.ac.in" class="business-email">AYAM.NITA@NIT.AC.IN</a>
+        <a href="mailto:ayam.nita@nit.ac.in" class="business-email">AAYAM.NITA@NIT.AC.IN</a>
       </div>
 
       <!-- Brand Large Text -->
       <div class="footer-brand">
-        <span class="brand-text">AYAM 2026</span>
+        <span class="brand-text">AAYAM 2026</span>
       </div>
 
       <!-- Social Icons -->
@@ -189,7 +189,7 @@
       </div>
 
       <div class="footer-bottom">
-        &copy; 2026 AYAM - NIT AGARTALA. ALL RIGHTS RESERVED.
+        &copy; 2026 AAYAM - NIT AGARTALA. ALL RIGHTS RESERVED.
       </div>
     </div>
   </footer>
