--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <!-- Left Column -->
       <div class="hero-left">
         <div class="hero-overline">
-          <span class="slash">//</span> March 06-09, 2026
+          <span class="slash">//</span> March XX-XX, 2026
         </div>
 
         <h1 class="poster-headline">
