"merch section informations"

--- a/index.html
+++ b/index.html
@@ -234,16 +234,35 @@
         </div>
       </div> -->
       <div class="merch-grid-container">
-        <!-- Product 1: T-Shirt -->
+        <!-- Product 1: Black Acid Wash -->
         <div class="merch-card">
-          <div class="merch-badge limited">LIMITED EDITION</div>
+          <div class="merch-badge limited">PREMIUM</div>
           <div class="merch-image-wrapper">
-            <img class="merch-img-front" src="assets/merch-tshirt-front.png" alt="Aayam T-Shirt Front">
-            <img class="merch-img-back" src="assets/merch-tshirt-back.png" alt="Aayam T-Shirt Back">
+            <img class="merch-img-front" src="assets/merch-tshirt-front.png" alt="Black Acid Wash Front">
+            <img class="merch-img-back" src="assets/merch-tshirt-back.png" alt="Black Acid Wash Back">
           </div>
           <div class="merch-details">
-            <h3 class="merch-title">CYBER TEE</h3>
-            <p class="merch-desc">Premium cotton blend with neon print.</p>
+            <h3 class="merch-title">ACID WASH BLACK</h3>
+            <p class="merch-desc">Premium acid washed texture with minimalist design.</p>
+            <div class="merch-meta">
+              <span class="merch-price">₹ 599</span>
+              <button class="btn-buy-icon"><i class="fa-solid fa-cart-shopping"></i></button>
+            </div>
+            <a href="#" class="btn-merch-action">PRE-ORDER NOW</a>
+          </div>
+        </div>
+
+        <!-- Product 2: Beige 8-Bit -->
+        <div class="merch-card featured">
+          <div class="merch-badge new">NEW DROP</div>
+          <div class="merch-image-wrapper">
+            <!-- Using existing placeholder assets for now, user to replace images -->
+            <img class="merch-img-front" src="assets/merch-hoodie-front.png" alt="Beige 8-Bit Front">
+            <img class="merch-img-back" src="assets/merch-hoodie-back.png" alt="Beige 8-Bit Back">
+          </div>
+          <div class="merch-details">
+            <h3 class="merch-title">8-BIT ARCADE BEIGE</h3>
+            <p class="merch-desc">Regular fit beige tee with Aayam X retro graphic.</p>
             <div class="merch-meta">
               <span class="merch-price">₹ 499</span>
               <button class="btn-buy-icon"><i class="fa-solid fa-cart-shopping"></i></button>
@@ -252,36 +271,19 @@
           </div>
         </div>
 
-        <!-- Product 2: Hoodie -->
-        <div class="merch-card featured">
-          <div class="merch-badge new">NEW DROP</div>
-          <div class="merch-image-wrapper">
-            <img class="merch-img-front" src="assets/merch-hoodie-front.png" alt="Aayam Hoodie Front">
-            <img class="merch-img-back" src="assets/merch-hoodie-back.png" alt="Aayam Hoodie Back">
-          </div>
-          <div class="merch-details">
-            <h3 class="merch-title">VOID HOODIE</h3>
-            <p class="merch-desc">Oversized fit with glow-in-dark sigils.</p>
-            <div class="merch-meta">
-              <span class="merch-price">₹ 999</span>
-              <button class="btn-buy-icon"><i class="fa-solid fa-cart-shopping"></i></button>
-            </div>
-            <a href="#" class="btn-merch-action">PRE-ORDER NOW</a>
-          </div>
-        </div>
-
-        <!-- Product 3: Cap -->
+        <!-- Product 3: Royal Blue Oversized -->
         <div class="merch-card">
-          <div class="merch-badge hot">BESTSELLER</div>
+          <div class="merch-badge hot">OVERSIZED</div>
           <div class="merch-image-wrapper">
-            <img class="merch-img-front" src="assets/merch-cap-front.png" alt="Aayam Cap Front">
-            <img class="merch-img-back" src="assets/merch-cap-back.png" alt="Aayam Cap Back">
+            <!-- Using existing placeholder assets for now -->
+            <img class="merch-img-front" src="assets/merch-cap-front.png" alt="Royal Blue Front">
+            <img class="merch-img-back" src="assets/merch-cap-back.png" alt="Royal Blue Back">
           </div>
           <div class="merch-details">
-            <h3 class="merch-title">STEALTH CAP</h3>
-            <p class="merch-desc">Embroidered logo with adjustable strap.</p>
+            <h3 class="merch-title">ROYAL BLUE ARCADE</h3>
+            <p class="merch-desc">Oversized fit with 8-bit mascot vehicle print.</p>
             <div class="merch-meta">
-              <span class="merch-price">₹ 299</span>
+              <span class="merch-price">₹ 549</span>
               <button class="btn-buy-icon"><i class="fa-solid fa-cart-shopping"></i></button>
             </div>
             <a href="#" class="btn-merch-action">PRE-ORDER NOW</a>
