style: fix mobile navbar alignment and pre-order redirection

--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
       <img src="assets/AAYAM.png" alt="AAYAM Logo" class="nav-logo-img">
     </a>
     <div class="nav-menu">
-      <a href="index.html" class="nav-link">Home</a>
+      <!-- <a href="index.html" class="nav-link">Home</a>
       <a href="events.html" class="nav-link">Events</a>
       <a href="sponsors.html" class="nav-link">Sponsors</a>
       <a href="merch.html" class="nav-link">Merch <i class="fa-solid fa-tag"
           style="font-size: 0.7em; vertical-align: super; color: var(--color-pink);"></i></a>
-      <a href="#gallery" class="nav-link">Gallery</a>
+      <a href="#gallery" class="nav-link">Gallery</a> -->
       <a href="#register" class="btn-nav-ticket">STAY TUNED</a>
     </div>
   </nav>
