--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
           </div>
           <div class="merch-details">
             <h3 class="merch-title">8-BIT ARCADE BEIGE</h3>
-            <p class="merch-desc">Regular fit beige tee with Aayan X retro graphic.</p>
+            <p class="merch-desc">Regular fit beige tee with Aayam X retro graphic.</p>
             <div class="merch-meta">
               <span class="merch-price">₹ 499</span>
               <button class="btn-buy-icon"><i class="fa-solid fa-cart-shopping"></i></button>
