--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
         </div>
       </div>
 
-    </div>
   </section>
   <div class="divoftrusted">
     <section class="trusted-section">
@@ -210,7 +209,7 @@
       <div class="coming-soon-container">
         <div class="coming-soon-content" style="display: flex; flex-direction: column; align-items: center; gap: 1rem;">
           <i class="fa-solid fa-rocket lock-icon"></i>
-          <h3 class="coming-soon-title">COMING SOON</h3>
+          <h3 class="coming-soon-title">ENTER THE ARENA</h3>
           <p class="coming-soon-subtitle">Unveiling Highlights Shortly</p>
           <a href="events.html" class="btn-skew-pink" style="text-decoration: none; margin-top: 1rem;">
             BROWSE ALL EVENTS
