feat: smart register buttons + category vibe toast
- Register/Coming Soon buttons restricted to Tech events only
- Talks, Workshops, Exhibitions, Cultural events get no register button
- Added per-category vibe toast on card click (2.5s auto-hide)
  🎤 Talk → FEEL THE SPEAKER VIBE
  🛠️ Workshop → LEVEL UP YOUR SKILLS
  🚀 Exhibition → WITNESS THE FUTURE
  🔥 Cultural → FEEL THE ENERGY
  ⚡ Tech → ENTER THE ARENA
- Toast slides up with neon pink glow from bottom of screen
- Added toast DOM element to events.html

--- a/events.html
+++ b/events.html
@@ -230,6 +230,9 @@
         </div>
     </footer>
 
+    <!-- Event Vibe Toast -->
+    <div id="event-toast" class="event-vibe-toast"></div>
+
     <script src="script.js"></script>
 </body>
 
