"some micro intraction"

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <div id="twinkle-container"></div>
 
   <!-- Crayon Trail Canvas -->
-  <canvas id="trail-canvas"></canvas>
+<canvas id="trail-canvas" style="position:fixed; top:0; left:0; width:100vw; height:100vh; pointer-events:none; z-index:9999;"></canvas>
 
   <!-- Navbar -->
   <nav class="top-nav">
@@ -129,7 +129,7 @@
           <!-- Massive Text -->
           <div class="massive-text-group">
             <h2 class="massive-ayam">AAYAM</h2>
-            <img src="assets/asset 54.svg" alt="Decorative Line" class="pink-ring-img">
+            <!-- <img src="assets/asset 54.svg" alt="Decorative Line" class="pink-ring-img"> -->
           </div>
 
           <!-- Pink Bar Text (Removed) -->
